--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
 	max-width: 800px;
 	text-align: justify;
 	margin: 0px auto;
+	padding-bottom: 40px;
 }
 .center {
 	text-align: center;
@@ -12,4 +13,8 @@
 	border-radius: 60px;
 	padding: 5px;
 	border:2px gray solid;
+}
+
+li:not(last-child) {
+	margin-bottom: 20px;
 }
