--- a/main.css
+++ b/main.css
@@ -1,12 +1,16 @@
 #main {
 	max-width: 800px;
-	text-align: justify;
 	margin: 0px auto;
 	padding-bottom: 40px;
+	text-align: justify;
 }
 
 .center {
 	text-align: center;
+}
+
+.left {
+	text-align: left;
 }
 
 .profile-pic {
